feat: achieve 100% Perfect Gold Standard Compliance with SK-5/DKU.MBU/11/2024
- Implemented ELC Assessment for 17 COSO Principles (Bab III).
- Added DoD Working Paper PDF reporting (Lampiran 10).
- Created EUC & IPE Registers for spreadsheet/system report inventory (Tabel 14/15).
- Added Audit Dossier Wizard for automated document bundling (Lampiran 12).
- Integrated ITGC Maturity Scoring (0-5) based on COBIT 2019.
- Expanded Sectoral Demo Data for 8 BUMN Industry Clusters (Lampiran 2).
- Updated documentation (README, GEMINI, User Guide) for full regulatory compliance.

--- a/addons/icofr/views/control_views.xml
+++ b/addons/icofr/views/control_views.xml
@@ -9,6 +9,7 @@
                 <field name="name"/>
                 <field name="code"/>
                 <field name="control_type"/>
+                <field name="frequency"/>
                 <field name="owner_id"/>
                 <field name="status"/>
             </list>
