--- a/addons/icofr/views/application_views.xml
+++ b/addons/icofr/views/application_views.xml
@@ -11,6 +11,7 @@
                 <field name="itgc_status" widget="badge" 
                        decoration-success="itgc_status == 'effective'" 
                        decoration-danger="itgc_status == 'ineffective'"/>
+                <field name="itgc_maturity_score" widget="badge"/>
                 <field name="company_id" groups="base.group_multi_company"/>
             </list>
         </field>
@@ -34,6 +35,7 @@
                         </group>
                         <group>
                             <field name="itgc_status"/>
+                            <field name="itgc_maturity_score"/>
                             <field name="is_processes_auto_ctrl"/>
                             <field name="is_processes_sig_account"/>
                         </group>
